--- a/docs/src/main/asciidoc/spring-security.adoc
+++ b/docs/src/main/asciidoc/spring-security.adoc
@@ -109,7 +109,7 @@ public class GreetingControllerTest {
 
 == Package and run the application
 
-Run the application with: `./mvn quarkus:dev`.
+Run the application with: `./mvnw quarkus:dev`.
 Open your browser to http://localhost:8080/greeting.
 
 The result should be: `{"message": "hello"}`.
