--- a/docs/src/main/asciidoc/container-image.adoc
+++ b/docs/src/main/asciidoc/container-image.adoc
@@ -73,7 +73,7 @@ To build a container image for your project, you just need to specify `quarkus.c
 
 [source, subs=attributes+]
 ----
-mvn clean package -Dquarkus.container-image.build=true
+./mvnw clean package -Dquarkus.container-image.build=true
 ----
 
 Setting the environment variable `QUARKUS_CONTAINER_IMAGE_EXECUTION` to `build` can be used instead of the system propery.
