--- a/docs/src/main/asciidoc/hibernate-orm-panache.adoc
+++ b/docs/src/main/asciidoc/hibernate-orm-panache.adoc
@@ -198,8 +198,8 @@ Person.deleteAll();
 // delete by id
 boolean deleted = Person.deleteById(personId);
 
-// update all living persons
-Person.update("name = 'Moral' where status = ?1", Status.Alive);
+// set the name of all living persons to 'Mortal'
+Person.update("name = 'Mortal' where status = ?1", Status.Alive);
 
 ----
 
@@ -385,8 +385,8 @@ personRepository.deleteAll();
 // delete by id
 boolean deleted = personRepository.deleteById(personId);
 
-// update all living persons
-personRepository.update("name = 'Moral' where status = ?1", Status.Alive);
+// set the name of all living persons to 'Mortal'
+personRepository.update("name = 'Mortal' where status = ?1", Status.Alive);
 
 ----
 
@@ -515,7 +515,7 @@ link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_Us
 [source,java]
 ----
 Order.find("select distinct o from Order o left join fetch o.lineItems");
-Order.update("update from Person set name = 'Moral' where status = ?", Status.Alive);
+Order.update("update from Person set name = 'Mortal' where status = ?", Status.Alive);
 ----
 
 === Query parameters
