--- a/docs/src/main/asciidoc/kubernetes.adoc
+++ b/docs/src/main/asciidoc/kubernetes.adoc
@@ -22,7 +22,7 @@ To complete this guide, you need:
 
 == Creating the Maven project
 
-First, we need a new project that contains the Kubernetes extension. This can be done using the following command:
+First, we need a new project that contains the Kubernetes extension and the Jib extension. This can be done using the following command:
 
 [source, subs=attributes+]
 ----
@@ -31,7 +31,7 @@ mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectArtifactId=kubernetes-quickstart \
     -DclassName="org.acme.rest.GreetingResource" \
     -Dpath="/greeting" \
-    -Dextensions="kubernetes"
+    -Dextensions="kubernetes, jib"
 cd kubernetes-quickstart
 ----
 
@@ -40,9 +40,11 @@ cd kubernetes-quickstart
 
 Quarkus offers the ability to automatically generate Kubernetes resources based on sane defaults and user supplied configuration. The implementation that takes care
 of generating the actual Kubernetes resources is provided by https://github.com/dekorateio/dekorate/[dekorate]. Currently it supports the generation of resources for
-vanilla Kubernetes and OpenShift.
+vanilla Kubernetes and OpenShift. Furthermore, Quarkus can deploy the application to a target Kubernetes cluster by applying the generated manifests to the target cluster's API Server.
+Finally, when either the `quarkus-container-image-jib` or `quarkus-container-container-image-docker` extensions are present (see the link:container-image[container image guide] for more details),
+Quarkus has the ability to create a container image and push it to a registry *before* deploying the application to the Kubernetes cluster.
 
-When we added the `kubernetes` extension to the command line invocation above, the following dependency was added to the `pom.xml`
+When we executed the previous command, the following dependencies were added to the `pom.xml`
 
 [source,xml]
 ----
@@ -50,9 +52,13 @@ When we added the `kubernetes` extension to the command line invocation above, t
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-kubernetes</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-container-image-jib</artifactId>
+    </dependency>
 ----
 
-By adding this dependency, we enable the generation of Kubernetes manifests each time we perform a build.
+By adding these dependencies, we enable the generation of Kubernetes manifests each time we perform a build while also enabling the build of a container-image.
 For example, following the execution of `./mvnw package` you will notice amongst the other files that are created, two files named
 `kubernetes.json` and `kubernetes.yml` in the `target/kubernetes/` directory.
 
@@ -140,8 +146,8 @@ The full source of the `kubernetes.json` file looks something like this:
 }
 ----
 
-An important thing to note about the `Deployment` is that is uses `yourDockerUsername/test-quarkus-app:1.0-SNAPSHOT` as the Docker image of the `Pod`.
-The name of the image is controlled by the container-image extension and can be customized using the usual `application.properties`.
+An important thing to note about the `Deployment` is that is uses `yourDockerUsername/test-quarkus-app:1.0-SNAPSHOT` as the container-image of the `Pod`.
+The name of the image is controlled by the `Jib` extension and can be customized using the usual `application.properties`.
 
 For example with a configuration like:
 
@@ -701,7 +707,7 @@ quarkus.kubernetes.env-vars.foo.configmap=myconfigmap
 
 == Deployment
 
-To trigger building and deploying a container image you need to enable the `quarkus.kubernetes.deploy` flag.
+To trigger building and deploying a container image you need to enable the `quarkus.kubernetes.deploy` flag (the flag is disabled by default - furthermore it has no effect during test runs or dev mode).
 This can be easily done with the command line:
 
 [source, subs=attributes+]
@@ -717,12 +723,12 @@ Building is possible, using any of the 3 available `container-image` extensions:
 - link:container-image#jib[Jib]
 - link:container-image#s2i[s2i]
 
-Each time deployment is requested, a container image build will be implicitly triggered (no additional properties are required).
+Each time deployment is requested, a container image build will be implicitly triggered (no additional properties are required when the Kubernetes deployment has been enabled).
 
 === Deploying
 
 When deployment is enabled, the kubernetes extension will selected the resources specified by `quarkus.kubernetes.deployment.target` and deploy them.
-This assumes that a `.kube/config` is available in your user directory that points to a real kubernetes cluster.
+This assumes that a `.kube/config` is available in your user directory that points to the target kubernetes cluster.
 In other words the extension will use whatever cluster `kubectl` uses. The same applies to credentials.
 
 At the moment no additional options are provided for further customization.
