--- a/docs/src/main/asciidoc/quartz.adoc
+++ b/docs/src/main/asciidoc/quartz.adoc
@@ -186,10 +186,10 @@ quarkus.quartz.clustered=true <1>
 quarkus.quartz.store-type=db <2>
 
 # Datasource configuration.
-quarkus.datasource.url=jdbc:postgresql://localhost/quarkus_test
-quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus_test
 quarkus.datasource.password=quarkus_test
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/quarkus_test
 
 # Hibernate configuration
 quarkus.hibernate-orm.database.generation=none
