--- a/docs/src/main/asciidoc/native-and-ssl.adoc
+++ b/docs/src/main/asciidoc/native-and-ssl.adoc
@@ -207,14 +207,22 @@ You can for example modify your `Dockerfile.native` as follows to copy the requi
 ----
 FROM quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor} as nativebuilder
 RUN mkdir -p /tmp/ssl \
-  && cp /opt/graalvm/lib/security/cacerts /tmp/ssl
+  && cp /opt/graalvm/lib/security/cacerts /tmp/ssl/
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal
 WORKDIR /work/
 COPY --from=nativebuilder /tmp/ssl/ /work/
 COPY target/*-runner /work/application
-RUN chmod 775 /work /work/application
+
+# set up permissions for user `1001`
+RUN chmod 775 /work /work/application \
+  && chown -R 1001 /work \
+  && chmod -R "g+rwX" /work \
+  && chown -R 1001:root /work
+
 EXPOSE 8080
+USER 1001
+
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0", "-Djavax.net.ssl.trustStore=/work/cacerts"]
 ----
 
