--- a/docs/src/main/asciidoc/security.adoc
+++ b/docs/src/main/asciidoc/security.adoc
@@ -334,7 +334,7 @@ public class RolesAugmentor implements SecurityIdentityAugmentor {
 
 == Reactive Security
 
-If you are going to use security in a reactive environment you will likely need Smallrye Content Propagation:
+If you are going to use security in a reactive environment, you will likely need SmallRye Context Propagation:
 
 [source,xml]
 ----
@@ -344,7 +344,7 @@ If you are going to use security in a reactive environment you will likely need 
 </dependency>
 ----
 
-This will allow you to propagate the identity throughout the reactive callback. You also need to make sure you
+This will allow you to propagate the identity throughout the reactive callbacks. You also need to make sure you
 are using an executor that is capable of propagating the identity (e.g. no `CompletableFuture.supplyAsync`),
 to make sure that quarkus can propagate it. For more information see the
 link:context-propagation[Context Propagation Guide].
